--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,10 @@
 <div class="login-container">
   <div class="login-box">
-    <img src="../../../assets/media/logo.png" alt="Logo" class="login-logo" />
+    <img
+      src="../../departamentos-stefi-admin/src/assets/media/logo.png"
+      alt="Logo"
+      class="login-logo"
+    />
     <div class="fs-4 text-center mb-5">
       <span>Departamentos</span><br />
       <span>Stefi</span>
