--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
     class="d-flex flex-column align-items-center text-decoration-none mb-3"
   >
     <img
-      src="../../../assets/media/logo.png"
+      src="../../departamentos-stefi-admin/src/assets/media/logo.png"
       alt="Logo"
       width="100"
       height="100"
